# xinp

./: CMakeLists.txt  Makefile  README.md  main.c
include/: xinp.h
include/i3/: ipc.h
include/util/: xinp_strutil.h
src/: ipc.c  xinp_strutil.c
